--- a/package.json
+++ b/package.json
@@ -18,6 +18,9 @@
         "popups": "^1.1.3",
         "pug": "^3.0.2",
         "stripe": "^10.10.0"
+    },
+    "scripts":{
+        "start":"nodemon --exec babel-node src/app.js"
     }
 
 
